feat: add current event admin lookup
